[package]
name = "eigenda-exex"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.5.4"
alloy-eips = "0.5.4"
alloy-primitives = "0.8.10"
alloy-provider = { version = "0.5.4", features = ["ws"] }
alloy-rpc-types-eth = "0.5.4"
alloy-sol-macro = "0.8.10"
alloy-sol-types = "0.8.10"
eigenda-proto = { git = "https://github.com/bowenyou/eigenda-proto", version = "0.1.0" }
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
kzgpad-rs = { git = "https://github.com/Layr-Labs/kzgpad-rs.git", version = "0.1.0" }
rand = "0.8.5"
reth = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
reth-exex-test-utils = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", version = "1.1.0" }
tokio = { version = "1.41.0", features = ["full"] }
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots", "tls-webpki-roots"] }
